[tool.poetry]
name = "flask-rest-api"
version = "0.1.0"
description = ""
authors = ["siemens <husek.petr@siemens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
flask-sqlalchemy = "^3.1.1"
flask-restful = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
